[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Autoload/MobileControls.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Mobile Controls/DPad.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Mobile Controls/MenuDPad.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Mobile Controls/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Mobile Controls/Title.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Mobile Controls/DPadWithTab.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Mobile Controls/DPadWithShift.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Mobile Controls/DPadPauseMenu.tscn" type="PackedScene" id=8]

[node name="Controls" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="DPad" parent="." instance=ExtResource( 2 )]

[node name="MenuDPad" parent="." instance=ExtResource( 3 )]

[node name="Hitbox" parent="." instance=ExtResource( 4 )]

[node name="Title" parent="." instance=ExtResource( 5 )]

[node name="DPadWithTab" parent="." instance=ExtResource( 6 )]

[node name="DPadWithShift" parent="." instance=ExtResource( 7 )]

[node name="DPadPauseMenu" parent="." instance=ExtResource( 8 )]
